--- a/src/styles/material-styles.scss
+++ b/src/styles/material-styles.scss
@@ -1,6 +1,6 @@
 @use '@angular/material' as mat;
 @use 'sass:map';
-@import './theme.scss';
+@use './theme.scss' as *;
 
 $main-palette: map.get($colors, 'primary');
 
