--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,18 +37,20 @@ app-root {
     display: flex;
     flex: 1;
 
-    > * {
-        padding: 2rem;
-    }
-
     .content {
         background-color: rgba(mat.m2-get-color-from-palette($main-palette, '700-contrast'), 0.9);
-        flex: 1;
+    }   
+
+    .sidebar, .content {
+        height: 100%;
+        padding: 2rem;
+        box-sizing: border-box;
     }
 
     .sidebar {
         background: linear-gradient(180deg, #373146 0%, mat.m2-get-color-from-palette($main-palette, '100-contrast') 50%);
-        flex: 0 0 13rem;
+        width: 17rem;
+        padding-top: 3rem;
     }
 }
 
